# FEE-CTU-codes

./: README.md
DSA/: Homework2.java  Homework3.java  Homework4.java  Homework5.java  readme.md
EAR/: readme.md
EAR/Meeting scheduler/: json_templates  pom.xml
KO/hw1/: main.py  result.txt
KO/hw2/: clean.ipynb  main-static.py  main.ipynb  main.py  model.lp  model2.lp  result.txt
KO/hw3/: main  main.cpp  out.txt
KO/hw4/: main  main.cpp  out.txt
OMO/: readme.md
OMO/Homework1/: pom.xml
OMO/Homework2/: OMOSet.java  OMOSetComplement.java  OMOSetEven.java  OMOSetIntersection.java  OMOSetUnion.java
OMO/Homework3/: InorderIterator.java  Iterator.java  Node.java  PostorderIterator.java  PreorderIterator.java
OMO/Homework4/: Homework4.java
PAL/hw1/: main.cpp
PAL/hw2/: main.cpp
PAL/hw3/: main.cpp
PAL/hw4/: main.cpp
PAL/hw5/: main.cpp
PAL/hw6/: main.cpp
PJC/: Readme.md
PJC/hw2-symcalc/: expr.cpp  expr_impl.cpp  expr_impl.hpp  main.cpp
PJC/semestral-project/: CMakeLists.txt  PrimeNumbersAlg.hpp  README.md  SieveOfAtkin.cpp  SieveOfEratosthenes.cpp  SieveOfSundaram.cpp  Validator.cpp  Wheel.cpp  main.cpp
PJV/: README.md
PJV/Chess - semestral project/: pom.xml
PJV/Homework1/: Lab01.java
PJV/Homework2/: Lab02.java
PJV/Homework3/: CircularArrayQueue.java
PJV/Homework4/: BruteForceAttacker.java
PJV/Homework5/: NodeImpl.java  TreeImpl.java
PSI/: readme.md
PSI/tcp/: nbactions.xml  (+1 more)
ZAL/: bst.py  calculator.py  dijkstra.py  linewriter.py  permutations.py  picalculator.py  polynom.py  readme.md  showroom.py  sort.py
ZWA/: readme.md
(+181 files in other folders)
